--- a/src/app/modules/dashboard/users/users.component.html
+++ b/src/app/modules/dashboard/users/users.component.html
@@ -1,1 +1,182 @@
-<p>users works!</p>
+<div class="table-wrapper">
+    <div class="table-title">
+        <div class="row">
+            <div class="col-sm-6">
+                <h2>Manage <b>Users</b></h2>
+            </div>
+            <div class="col-sm-6">
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-primary" (click)="clearForm()" data-bs-toggle="modal"
+                    data-bs-target="#createUserModal">
+                    New
+                </button>
+            </div>
+        </div>
+    </div>
+    <table class="table table-striped table-hover">
+        <thead>
+            <tr>
+                <th>Nombres</th>
+                <th>Apellidos</th>
+                <th>Fecha nacimiento</th>
+                <th>Emailr</th>
+                <th>Area</th>
+                <th>Salary</th>
+                <th>Status</th>
+            </tr>
+        </thead>
+        <tbody>
+            <ng-container *ngFor="let user of usersData">
+                <tr>
+                    <td>{{user.firstName}}</td>
+                    <td>{{user.lastName}}</td>
+                    <td>{{user.birthDate}}</td>
+                    <td>{{user.email}}</td>
+                    <td>{{user.area}}</td>
+                    <td>{{user.salary}}</td>
+                    <td>{{user.state}}</td>
+                    <td class="col-2">
+                        <button class="btn btn-info btn-sm edit mx-2" data-bs-toggle="modal"
+                            data-bs-target="#editUserModal" (click)="modalWithUserData(user)"><i
+                                class="fa fa-pencil-square-o" data-toggle="tooltip" title="Edit"></i></button>
+                        <button class="btn btn-danger btn-sm delete" data-bs-toggle="modal"
+                            data-bs-target="#deleteUserModal" (click)="selectDeleteId(user.id)"><i class="fa fa-trash-o"
+                                data-toggle="tooltip" title="Delete"></i></button>
+                    </td>
+                </tr>
+            </ng-container>
+        </tbody>
+    </table>
+</div>
+
+<!-- Modal create -->
+<div class="modal fade" id="createUserModal" tabindex="-1" aria-labelledby="createUserModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="createUserModal">Create User</h5>
+                <button #buttonCloseModal type="button" class="btn-close" data-bs-dismiss="modal"
+                    aria-label="Close"></button>
+            </div>
+            <form [formGroup]="usersForm" (ngSubmit)="createUser()">
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Documento: </label>
+                        <input type="number" class="form-control" id="id" formControlName="id">
+                    </div>
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Nombres: </label>
+                        <input type="text" class="form-control" id="firstName" formControlName="firstName">
+                    </div>
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Apellidos: </label>
+                        <input type="text" class="form-control" id="lastName" formControlName="lastName">
+                    </div>
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Fecha nacimiento: </label>
+                        <input type="text" class="form-control" id="birthDate" formControlName="birthDate">
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
+                            formControlName="email">
+                        <div id="emailHelp" class="form-text">No compartas tu correo con nadie.</div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Area: </label>
+                        <input type="number" class="form-control" id="area" formControlName="area">
+                    </div>
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Salary: </label>
+                        <input type="number" class="form-control" id="salary" formControlName="salary">
+                    </div>
+                    <div class="mb-3">
+                        <label for="status" class="form-label">Status: </label>
+                        <select class="form-select" formControlName="state">
+                            <option *ngFor="let statusUser of status">{{statusUser}}</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-primary">Save user</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<!-- Modal edit -->
+<div class="modal fade" id="editUserModal" tabindex="-1" aria-labelledby="editUserModal" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="editUserModal">Edit User</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form [formGroup]="usersForm" (ngSubmit)="editUser()">
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Documento: </label>
+                        <input type="number" class="form-control" id="id" formControlName="id">
+                    </div>
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Nombres: </label>
+                        <input type="text" class="form-control" id="firstName" formControlName="firstName">
+                    </div>
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Apellidos: </label>
+                        <input type="text" class="form-control" id="lastName" formControlName="lastName">
+                    </div>
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Fecha nacimiento: </label>
+                        <input type="text" class="form-control" id="birthDate" formControlName="birthDate">
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
+                            formControlName="email">
+                        <div id="emailHelp" class="form-text">No compartas tu correo con nadie.</div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Area: </label>
+                        <input type="number" class="form-control" id="area" formControlName="area">
+                    </div>
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Salary: </label>
+                        <input type="number" class="form-control" id="salary" formControlName="salary">
+                    </div>
+                    <div class="mb-3">
+                        <label for="status" class="form-label">Status: </label>
+                        <select class="form-select" formControlName="state">
+                            <option *ngFor="let statusUser of status">{{statusUser}}</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-primary">Edit user</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<!-- Modal delete -->
+<div class="modal fade" id="deleteUserModal" tabindex="-1" aria-labelledby="deleteUserModal" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteUserModal">Delete User</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to delete this user?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" (click)="deleteUser(this.deleteId)">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
