[FEACTURE] - Sidebar,  topbar component implement

--- a/src/app/shared/pages/sidebar/sidebar.component.html
+++ b/src/app/shared/pages/sidebar/sidebar.component.html
@@ -1,1 +1,9 @@
-<p>sidebar works!</p>
+<h2 class="heading-style">Dashboard</h2>
+<ul class="list-style">
+    <li class="list-style-item">
+        <a href="" routerLink="users">Usuarios</a>
+    </li>
+    <li class="list-style-item">
+        <a href="" routerLink="areas">Areas</a>
+    </li>
+</ul>
