--- a/src/app/shared/pages/topbar/topbar.component.html
+++ b/src/app/shared/pages/topbar/topbar.component.html
@@ -1,1 +1,6 @@
-<p>topbar works!</p>
+<div class="container-style">
+    <h2>Ludycom</h2>
+    <p class="description">
+        Prueba realizada por David De La Hoz
+    </p>
+</div>
