--- a/src/app/modules/dashboard/users/users.component.html
+++ b/src/app/modules/dashboard/users/users.component.html
@@ -28,12 +28,12 @@
         <tbody>
             <ng-container *ngFor="let user of usersData">
                 <tr>
-                    <td>{{user.firstName}}</td>
-                    <td>{{user.lastName}}</td>
+                    <td>{{user.firstName | uppercase}}</td>
+                    <td>{{user.lastName | uppercase}}</td>
                     <td>{{user.birthDate}}</td>
                     <td>{{user.email}}</td>
                     <td>{{user.area}}</td>
-                    <td>{{user.salary}}</td>
+                    <td>{{user.salary | currency:'COP':'symbol-narrow'}}</td>
                     <td>{{user.state}}</td>
                     <td class="col-2">
                         <button class="btn btn-info btn-sm edit mx-2" data-bs-toggle="modal"
@@ -87,11 +87,11 @@
                         <input type="number" class="form-control" id="area" formControlName="area">
                     </div>
                     <div class="mb-3">
-                        <label for="name" class="form-label">Salary: </label>
+                        <label for="name" class="form-label">Salario: </label>
                         <input type="number" class="form-control" id="salary" formControlName="salary">
                     </div>
                     <div class="mb-3">
-                        <label for="status" class="form-label">Status: </label>
+                        <label for="status" class="form-label">Estado: </label>
                         <select class="form-select" formControlName="state">
                             <option *ngFor="let statusUser of status">{{statusUser}}</option>
                         </select>
@@ -143,11 +143,11 @@
                         <input type="number" class="form-control" id="area" formControlName="area">
                     </div>
                     <div class="mb-3">
-                        <label for="name" class="form-label">Salary: </label>
+                        <label for="name" class="form-label">Salario: </label>
                         <input type="number" class="form-control" id="salary" formControlName="salary">
                     </div>
                     <div class="mb-3">
-                        <label for="status" class="form-label">Status: </label>
+                        <label for="status" class="form-label">Estado: </label>
                         <select class="form-select" formControlName="state">
                             <option *ngFor="let statusUser of status">{{statusUser}}</option>
                         </select>
